Bug 380879 - [Qt 5.9] Konsole tabbar does not have empty space at the right side anymore
Summary: [Qt 5.9] Konsole tabbar does not have empty space at the right side anymore
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: tabbar (other bugs)
Version First Reported In: 17.04.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 381118 381993 389044 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-06-06 08:05 UTC by Bastian Beischer
Modified: 2018-01-21 11:35 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bastian Beischer 2017-06-06 08:05:16 UTC
Arch Linux updated Qt to 5.9.0 and since then konsole tabbar does not have any "empty space" at the right side of the tabbar anymore. I'm talking about the space which you can double click to open a new tab.

For example, with a single tab, the tab used to span from the left to about half of the bar and the right half was empty. With Qt 5.9.0 this is no longer the case: The tab spans the entire bar.

Might be a Qt 5.9.0 bug, but maybe not...
Comment 1 Christoph Feck 2017-06-12 00:17:26 UTC
Regression caused by commit for https://bugreports.qt.io/browse/QTBUG-58266
Comment 2 Christoph Feck 2017-06-12 11:40:21 UTC
*** Bug 381118 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2017-06-12 11:41:30 UTC
Thanks for the upstream report; adding it here as a reference.

https://bugreports.qt.io/browse/QTBUG-61362
Comment 4 Bastian Beischer 2017-06-15 12:30:14 UTC
Oleg Yadrov from Qt says that the fault is in Konsole (https://bugreports.qt.io/browse/QTBUG-61362). Could a qualified person please check and reply to him?
Comment 5 Bastian Beischer 2017-07-04 16:34:51 UTC
It appears that Oleg Yadrov from Qt is certain that this is a Konsole bug. The originally reported bug (https://bugreports.qt.io/browse/QTBUG-61362) was closed as 'Invalid' and the offspring bug (https://bugreports.qt.io/browse/QTBUG-61480) was fixed in a way that still leaves the Konsole tabbar broken.
Comment 6 Christoph Feck 2017-07-04 16:53:19 UTC
Qt no longer offers a mode where the tabs have fixed size (to avoid constant resizing on directory changes), but with some space available.

In Konsole, we can either leave it as is, revert to non-exanding tabs, or hope that someone at Qt sees the need for the previous existing mode.
Comment 7 Christoph Feck 2017-07-04 18:45:50 UTC
*** Bug 381993 has been marked as a duplicate of this bug. ***
Comment 8 AE 2017-07-04 19:21:20 UTC
Maybe a third solution, or rather mitigation, would be to make the 'create new tab' button visible by default again (as it was until some point in the kde-4 release series)
Comment 9 Bastian Beischer 2017-07-04 19:22:52 UTC
What about adding an empty expanding tab manually at the end of the normal tabs? That should work, shouldn't it?
Comment 10 Kurt Hindenburg 2017-07-08 21:01:03 UTC
Let's leave this open for now while I look at it and others can provide comments.
Comment 11 Kurt Hindenburg 2017-07-08 21:53:01 UTC
A temporary workaround is to use below

qdbus ${KONSOLE_DBUS_SERVICE} ${KONSOLE_DBUS_WINDOW} setTabWidthToText true

Also should test using a special .css file.

Obviously something else needs to be done.
Comment 12 Roman Gilg 2017-07-26 15:24:42 UTC
Ok with this (no fixed length, but not expanding anymore)? https://phabricator.kde.org/D6935
Comment 13 Kurt Hindenburg 2017-08-02 01:37:40 UTC
I don't like forcing 'setExpanding(false);'  The only downside to the current behavior is not being able to double-click on empty space to create new tab.  For that, you can enable the buttons on the tabbar.
Comment 14 Bastian Beischer 2017-08-02 13:52:50 UTC
Personally I've grown very accustomed to double-clicking the empty space and I'd prefer to keep that option. I'm not overly fond of the looks of the non-expanding tabs, either.

But both of these things might be a matter of getting used to after all...
Comment 15 Roman Gilg 2017-08-03 14:07:20 UTC
In the end the real fix should be to get the style sheet for minimal and maximal tab width working here:

https://cgit.kde.org/konsole.git/tree/src/ViewContainer.cpp#n474

The function is currently not called on konsole launch but I tried to call it on launch and it didn't limit the tab width as I hoped.

But just accepting the different behavior from 5.9 on is bad. The new tab button isn't even default iirc. How should a new user notice that he could use multiple tabs?
Comment 16 Kurt Hindenburg 2017-08-06 23:59:17 UTC
We can turn on the edge buttons by default for Qt5.9+ if need be

I tried getting the min/max CSS width to work as well - not sure it is possible in Qt 5.9
Comment 17 Nate Graham 2017-10-23 15:08:07 UTC
Is this a WONTFIX?
Comment 18 Kurt Hindenburg 2017-10-23 15:19:56 UTC
I'm working on some code - I'll see how it turns out - I hope to have something for next release
Comment 19 Vadzim Dambrouski 2017-10-26 14:54:16 UTC
Just updated my archlinux and now the "center tabs" workaround doesn't work anymore. Is there some experimental patches I can apply to bring back old behavior? I can't live without double click.
Comment 20 Kurt Hindenburg 2017-11-05 17:06:00 UTC
Git commit 001d937d10949bc5d377ef2147dc96e376ca635b by Kurt Hindenburg.
Committed on 05/11/2017 at 16:56.
Pushed by hindenburg into branch 'master'.

Add option to allow tab width to be expanding

Qt5.9+ changed the way tab widths are handled.  Add option to allow
tab width to expanding to full window or as width of tab text.

GUI:
FIXED-IN: 17.12

M  +6    -0    src/MainWindow.cpp
M  +1    -0    src/MainWindow.h
M  +13   -0    src/ViewContainer.cpp
M  +14   -0    src/ViewContainer.h
M  +11   -0    src/ViewManager.cpp
M  +2    -0    src/ViewManager.h
M  +52   -25   src/settings/TabBarSettings.ui
M  +4    -0    src/settings/konsole.kcfg

https://commits.kde.org/konsole/001d937d10949bc5d377ef2147dc96e376ca635b
Comment 21 Roman Gilg 2017-11-05 18:04:36 UTC
The default should be either:

- Expand and show new tab + close tab buttons
- Not expand

to give the user a visual hint about the possibility to open multiple tabs.

With the patch the default is "expand but not show new tab + close tab buttons". A new user to Konsole might not know because of that about the possibility to use several tabs.
Comment 22 Roman Gilg 2017-11-05 18:06:50 UTC
(IMO the default should be to not expand - it is aligned then with what Dolphin and Kate are doing per default)
Comment 23 Kurt Hindenburg 2017-11-05 20:23:25 UTC
I'll change it shortly - I wanted something in for next release.

Also, I don't care for the wording/action when using < Qt5.9 (FreeBSD currently)
Comment 24 Kurt Hindenburg 2017-11-06 14:05:48 UTC
Git commit 1feffb1fff561ab4038071882ed7940436005a31 by Kurt Hindenburg.
Committed on 06/11/2017 at 14:02.
Pushed by hindenburg into branch 'master'.

Set default to false for tab width expanding

There doesn't appear a simple way to use #if QT_VERSION to handle this
other than have #if in the .kcfg file.

M  +1    -1    src/settings/TabBarSettings.ui
M  +1    -1    src/settings/konsole.kcfg

https://commits.kde.org/konsole/1feffb1fff561ab4038071882ed7940436005a31
Comment 25 Kurt Hindenburg 2018-01-16 14:09:13 UTC
*** Bug 389044 has been marked as a duplicate of this bug. ***