Add option to allow tab width to be expanding

Qt5.9+ changed the way tab widths are handled.  Add option to allow
tab width to expanding to full window or as width of tab text.

GUI:
BUG: 380879
FIXED-IN: 17.12